fix: change artifactory prefix

--- a/tests/08_v2_a_workflow_artifactory_plugins.yml
+++ b/tests/08_v2_a_workflow_artifactory_plugins.yml
@@ -83,7 +83,7 @@ testcases:
           value: ""
           type: password
         repo.prefix:
-          value: fsamin-v2
+          value: {{.rt_project}}
           type: string
         token:
           value: {{.rt_token}}
