fix: add repo prefix

--- a/tests/08_v2_workflow_generic_artifacts_with_artifactory.yml
+++ b/tests/08_v2_workflow_generic_artifacts_with_artifactory.yml
@@ -82,7 +82,7 @@ testcases:
           value: ""
           type: password
         repo.prefix:
-          value: {{.rt_project}}
+          value: {{.rt_project}}-{{.rt_component}}
           type: string
         token:
           value: {{.rt_token}}
