feat(api,sdk): new workflow template v2
Signed-off-by: Alexandre JIN <1076513+Inozuma@users.noreply.github.com>

--- a/tests/lib/v2_create_project.yml
+++ b/tests/lib/v2_create_project.yml
@@ -74,6 +74,9 @@ steps:
         - role: manage-workflow
           projects: [{{.input.cds_project}}]
           users: [{{.cds_user.username}}]
+        - role: manage-workflow-template
+          projects: [{{.input.cds_project}}]
+          users: [{{.cds_user.username}}]
       workflows:
         - role: trigger
           all_users: true
