--- a/contrib/vscode-cds/package.json
+++ b/contrib/vscode-cds/package.json
@@ -99,7 +99,8 @@
   },
   "dependencies": {
     "vscode-uri": "^3.0.3",
-    "vscode-messenger": "^0.4.5"
+    "vscode-messenger": "^0.4.5",
+    "vscode-messenger-common": "~0.4.5"
   },
   "devDependencies": {
     "@types/mocha": "^10.0.6",
