--- a/tests/lib/v2_install_gpg_key.yml
+++ b/tests/lib/v2_install_gpg_key.yml
@@ -62,6 +62,9 @@ steps:
     assertions:
     - result.statuscode ShouldEqual 204
 
+  # display secret key info
+  - script: gpg --list-secret-keys
+    info: "input.gpg_key_id is {{.input.gpg_key_id}}"
   # Get the email address associated with the gpg key
   - script: >
       gpg --list-secret-keys | grep {{.input.gpg_key_id}} -A 1 | tail -n 1 | grep --only-matching --extended-regexp "<.*>" | head -n 1 | cut -c2- | rev | cut -c2- | rev
