--- a/tests/08_v2_sub_action.yml
+++ b/tests/08_v2_sub_action.yml
@@ -61,11 +61,13 @@ testcases:
           runs:
             steps:
               - run: |-
-                  echo "Welcome in action parent-action"
+                  echo "Welcome in action parent-action on workflow ${{ cds.workflow }}"
               - uses: actions/{{.cds_project}}/my_vcs_server/{{.git.user}}/{{.git_repo}}/child-action@master
                 with:
                   projectName: ${{ cds.project_key }}
                   name: 'Foo'
+                env:
+                  CHILD: BAR  
         actions/child-action.yaml:
           name: child-action
           inputs:
@@ -79,7 +81,7 @@ testcases:
               default: Doe
           runs:
             steps:
-              - run: echo "Hello ${{ inputs.name }} ${{ inputs.lastname }} from project ${{ inputs.projectName }}"
+              - run: echo "Hello ${{ inputs.name }} ${{ inputs.lastname }} from project ${{ inputs.projectName }}. Env ${PARENT}-${CHILD}"
         workflows/sub-action.yaml:
           name: {{.cds_workflow}}
           on: [push]
@@ -89,6 +91,8 @@ testcases:
               steps:
                 - uses: .cds/actions/parent-action.yaml
                   id: action
+                  env:
+                    PARENT: FOO
 
     - name: Check CDS project analyses status
       script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental project analysis list {{.cds_project}} my_vcs_server {{.git.user}}/{{.git_repo}} --format json"
@@ -118,6 +122,8 @@ testcases:
     - name: Display log
       script: cat {{.cds_workflow}}-1-1-init-action
     - name: Check log content
-      script: "cat {{.cds_workflow}}-1-1-init-action | grep \"Welcome in action parent-action\""
+      script: "cat {{.cds_workflow}}-1-1-init-action | grep \"Welcome in action parent-action on workflow {{.cds_workflow}}\""
     - name: Check log in sub action
       script: "cat {{.cds_workflow}}-1-1-init-action | grep \"Hello Foo Doe from project {{.cds_project}}\""
+    - name: Check env log in sub action
+      script: "cat {{.cds_workflow}}-1-1-init-action && cat {{.cds_workflow}}-1-1-init-action | grep \"Env FOO-BAR\""
