fix(engine): default run retention workflow v2
Signed-off-by: Yvonnick Esnault <yvonnick.esnault@corp.ovh.com>

--- a/contrib/vscode-cds/Makefile
+++ b/contrib/vscode-cds/Makefile
@@ -24,3 +24,6 @@ package: $(TARGET_DIST) build
 
 clean:
 	rm -f $(DIST)/vscode-cds-*.vsix
+
+install:
+	code --install-extension $(DIST)/vscode-cds-*.vsix
