--- a/tests/08_v2_manual_run.yml
+++ b/tests/08_v2_manual_run.yml
@@ -152,30 +152,23 @@ testcases:
     - name: Check CDS project analyses status after branch creation
       script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental project analysis list {{.cds_project}} my_vcs_server {{.git.user}}/{{.git_repo}} --format json"
       assertions:
-        - result.systemoutjson ShouldHaveLength 4
-        - result.systemoutjson.systemoutjson0.status ShouldEqual "Skipped"
-        - result.systemoutjson.systemoutjson1.status ShouldEqual "Success" 
-        - result.systemoutjson.systemoutjson2.status ShouldEqual "Success" 
-        - result.systemoutjson.systemoutjson2.status ShouldEqual "Success"    
+        - result.systemoutjson ShouldHaveLength 5
+        - result.systemoutjson.systemoutjson4.status ShouldEqual "Success"    
       retry: 10
       delay: 12   
-    - name: Manual run on branch
+    - name: Manual run on branch testbranch
       script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental workflow run {{.cds_project}} my_vcs_server {{.git.user}}/{{.git_repo}} {{.cds_workflow}} --branch testbranch"
-    - name: Check CDS project analyses status after run on branch update
+    - name: Check CDS project analyses status after run onbranch testbranch
       script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental project analysis list {{.cds_project}} my_vcs_server {{.git.user}}/{{.git_repo}} --format json"
       assertions:
-        - result.systemoutjson ShouldHaveLength 5
-        - result.systemoutjson.systemoutjson0.status ShouldEqual "Skipped"
-        - result.systemoutjson.systemoutjson1.status ShouldEqual "Success" 
-        - result.systemoutjson.systemoutjson2.status ShouldEqual "Success" 
-        - result.systemoutjson.systemoutjson2.status ShouldEqual "Success"
-        - result.systemoutjson.systemoutjson2.status ShouldEqual "Success"    
+        - result.systemoutjson ShouldHaveLength 6
+        - result.systemoutjson.systemoutjson5.status ShouldEqual "Success"    
       retry: 10
       delay: 12   
-    - name: Check that the CDS workflow has at least two executions and is Success
+    - name: Check that the CDS workflow has been executed
       script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental workflow history {{.cds_project}} my_vcs_server {{.git.user}}/{{.git_repo}} {{.cds_workflow}} --format json"
       assertions:
-        - result.systemoutjson ShouldHaveLength 3
+        - result.systemoutjson ShouldHaveLength 2
         - result.systemoutjson.systemoutjson1.status ShouldEqual "Success"
       retry: 30
       delay: 5    
