--- a/tests/08_v2_manual_run.yml
+++ b/tests/08_v2_manual_run.yml
@@ -143,5 +143,32 @@ testcases:
     - name: Check checkout log content 2
       script: "cat {{.cds_workflow}}-1-1-init-checkout && cat {{.cds_workflow}}-1-1-init-checkout | grep \"Checkout branch master\""  
     - name: Check commit
-      script: "cat {{.cds_workflow}}-1-1-init-gitvariables && cat {{.cds_workflow}}-1-1-init-gitvariables | grep \"{{.Push-workflow-file.commitToRun}}\""
-   
+      script: "cat {{.cds_workflow}}-1-1-init-gitvariables && cat {{.cds_workflow}}-1-1-init-gitvariables | grep \"{{.Push-workflow-file.commitToRun}}\"" 
+
+- name: Git create branch
+  steps:
+    - name: Create branch
+      script: cd /tmp/repos/{{.git_repo}} && git checkout -b testbranch && git push origin testbranch
+    - name: Check CDS project analyses status after branch creation
+      script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental project analysis list {{.cds_project}} my_vcs_server {{.git.user}}/{{.git_repo}} --format json"
+      assertions:
+        - result.systemoutjson ShouldHaveLength 5
+        - result.systemoutjson.systemoutjson4.status ShouldEqual "Success"    
+      retry: 10
+      delay: 12   
+    - name: Manual run on branch testbranch
+      script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental workflow run {{.cds_project}} my_vcs_server {{.git.user}}/{{.git_repo}} {{.cds_workflow}} --branch testbranch"
+    - name: Check CDS project analyses status after run onbranch testbranch
+      script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental project analysis list {{.cds_project}} my_vcs_server {{.git.user}}/{{.git_repo}} --format json"
+      assertions:
+        - result.systemoutjson ShouldHaveLength 6
+        - result.systemoutjson.systemoutjson5.status ShouldEqual "Success"    
+      retry: 10
+      delay: 12   
+    - name: Check that the CDS workflow has been executed
+      script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental workflow history {{.cds_project}} my_vcs_server {{.git.user}}/{{.git_repo}} {{.cds_workflow}} --format json"
+      assertions:
+        - result.systemoutjson ShouldHaveLength 2
+        - result.systemoutjson.systemoutjson1.status ShouldEqual "Success"
+      retry: 30
+      delay: 5    
