--- a/tests/08_v2_key_install.yml
+++ b/tests/08_v2_key_install.yml
@@ -93,16 +93,28 @@ testcases:
     - name: Check that the CDS workflow has at least one execution and is Success
       script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental workflow history {{.cds_project}} my_vcs_server {{.git.user}}/{{.git_repo}} {{.cds_workflow}} --format json"
       assertions:
+      - and: 
         - result.systemoutjson ShouldHaveLength 1
-        - result.systemoutjson.systemoutjson0.status ShouldEqual "Success"
+        - or:
+          - result.systemoutjson.systemoutjson0.status ShouldEqual Success
+          - result.systemoutjson.systemoutjson0.status ShouldEqual Fail
       retry: 20
       delay: 5
       vars:
         workflowRunID:
           from: result.systemoutjson.systemoutjson0.id
+        workflowRunStatus:  
+          from: result.systemoutjson.systemoutjson0.status
+           
 
     - name: Download logs
-      script: {{.cdsctl}} -f {{.cdsctl.config}} experimental workflow logs download {{.cds_project}} {{.workflowRunID}}
+      script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental workflow logs download {{.cds_project}} {{.workflowRunID}}"
+
+    - name: Get run info
+      script:  "{{.cdsctl}} -f {{.cdsctl.config}} experimental workflow info {{.cds_project}} {{.workflowRunID}}"     
+
+    - name: Get job info
+      script:  "{{.cdsctl}} -f {{.cdsctl.config}} experimental workflow jobs status {{.cds_project}} {{.workflowRunID}}"      
 
     - name: Checkpgp key
       script: "cat {{.cds_workflow}}-1-1-pgp-step-0 && cat {{.cds_workflow}}-1-1-pgp-step-0 | grep \"pgpkey proj-pgp-itv2keyinstall has been imported\""
@@ -110,3 +122,8 @@ testcases:
       script: "cat {{.cds_workflow}}-1-1-init-step-0 && cat {{.cds_workflow}}-1-1-init-step-0 | grep \"sshkey proj-ssh-itv2keyinstall has been created\""
     - name: Checkssh key
       script: "cat {{.cds_workflow}}-1-1-init-displayssh && cat {{.cds_workflow}}-1-1-init-displayssh | grep \"**********\""
+
+    - name: Echo Status
+      script: echo {{.workflowRunStatus}}
+      assertions:
+      - result.systemout ShouldEqual Success
