--- a/tests/08_v2_sub_action.yml
+++ b/tests/08_v2_sub_action.yml
@@ -60,14 +60,26 @@ testcases:
           name: parent-action
           runs:
             steps:
-              - run: |-
+              - id: firststep
+                run: |-
                   echo "Welcome in action parent-action on workflow ${{ cds.workflow }}"
-              - uses: actions/{{.cds_project}}/my_vcs_server/{{.git.user}}/{{.git_repo}}/child-action@master
+                  worker export tag foo
+                  worker export image bar
+              - id: callchild
+                uses: actions/{{.cds_project}}/my_vcs_server/{{.git.user}}/{{.git_repo}}/child-action@master
                 with:
                   projectName: ${{ cds.project_key }}
                   name: 'Foo'
                 env:
                   CHILD: BAR  
+              - run: echo "Tag=${{ steps.firststep.outputs.tag }}"
+              - run: echo "ChildInParent=${{steps.callchild.outputs.exportedChild}}"
+          outputs:
+            parentOutFromChild:
+              value: ${{ steps.callchild.outputs.exportedChild}}   
+            image:
+              value: $${{ steps.firststep.outputs.image}}   
+                  
         actions/child-action.yaml:
           name: child-action
           inputs:
@@ -82,6 +94,14 @@ testcases:
           runs:
             steps:
               - run: echo "Hello ${{ inputs.name }} ${{ inputs.lastname }} from project ${{ inputs.projectName }}. Env ${PARENT}-${CHILD}"
+              - id: step2
+                run: worker export childvar1 childvalue1
+              - id: step3
+                run: worker export childvar2 childvalue2
+              - run: echo "ChildVar=${{ steps.step2.outputs.childvar1}}"
+          outputs:
+            exportedChild:
+              value: ${{ steps.step3.outputs.childvar2 }}      
         workflows/sub-action.yaml:
           name: {{.cds_workflow}}
           on: [push]
@@ -93,6 +113,9 @@ testcases:
                   id: action
                   env:
                     PARENT: FOO
+              outputs:
+                fromParent:
+                  value: ${{ steps.action.outputs.parentOutFromChild }}     
 
     - name: Check CDS project analyses status
       script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental project analysis list {{.cds_project}} my_vcs_server {{.git.user}}/{{.git_repo}} --format json"
@@ -126,4 +149,14 @@ testcases:
     - name: Check log in sub action
       script: "cat {{.cds_workflow}}-1-1-init-action | grep \"Hello Foo Doe from project {{.cds_project}}\""
     - name: Check env log in sub action
-      script: "cat {{.cds_workflow}}-1-1-init-action && cat {{.cds_workflow}}-1-1-init-action | grep \"Env FOO-BAR\""
+      script: "cat {{.cds_workflow}}-1-1-init-action | grep \"Env FOO-BAR\""
+    - name: Check Child var1
+      script: "cat {{.cds_workflow}}-1-1-init-action | grep \"ChildVar=childvalue1\""  
+    - name: Check Parent tag
+      script: "cat {{.cds_workflow}}-1-1-init-action | grep \"Tag=foo\""    
+    - name: Check Parent tag
+      script: "cat {{.cds_workflow}}-1-1-init-action | grep \"ChildInParent=childvalue2\""          
+    - name: Check that we have 1 run result of type variable
+      script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental workflow result list {{.cds_project}} {{.workflowRunID}} --filter type=variable --format json"  
+      assertions:
+      - result.systemoutjson ShouldHaveLength 1
